# my_raylib_games

./: .clang-format  .clangd  .gdbinit  .gitignore  .nvim.lua  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  build_run.sh  embed_assets.sh  imgui.ini
.cache/clangd/index/: main.cpp.676894445678C123.idx  main.cpp.F09379C46F5A473C.idx
.github/workflows/: docs.yml
assets/: hotload.glb  setup.lua  test_setup.txt
assets/glb_output/flat.city_clearing.green/: city_clearing_0.glb  city_clearing_1.glb  city_clearing_2.glb  city_clearing_3.glb  city_clearing_4.glb  city_clearing_5.glb  city_clearing_6.glb  city_clearing_7.glb  city_clearing_8.glb  city_clearing_9.glb
assets/glb_output/flat.city_clearing.winter/: city_clearing_0.glb  city_clearing_1.glb  city_clearing_2.glb  city_clearing_3.glb  city_clearing_4.glb  city_clearing_5.glb  city_clearing_6.glb  city_clearing_7.glb  city_clearing_8.glb  city_clearing_9.glb
assets/glb_output/flat.city_dense.green/: city_dense_0.glb  city_dense_1.glb  city_dense_2.glb  city_dense_3.glb  city_dense_4.glb  city_dense_5.glb  city_dense_6.glb  city_dense_7.glb  city_dense_8.glb  city_dense_9.glb
assets/glb_output/flat.city_dense.winter/: city_dense_0.glb  city_dense_1.glb  city_dense_2.glb  city_dense_3.glb  city_dense_4.glb  city_dense_5.glb  city_dense_6.glb  city_dense_7.glb  city_dense_8.glb  city_dense_9.glb
assets/glb_output/flat.clouds.white/: clouds_0.glb  clouds_1.glb  clouds_2.glb  clouds_3.glb  clouds_4.glb  clouds_5.glb  clouds_6.glb  clouds_7.glb  clouds_8.glb  clouds_9.glb
assets/glb_output/flat.desert_clearing.yellow/: desert_clearing_0.glb  desert_clearing_1.glb  desert_clearing_2.glb  desert_clearing_3.glb  desert_clearing_4.glb  desert_clearing_5.glb  desert_clearing_6.glb  desert_clearing_7.glb  desert_clearing_8.glb  desert_clearing_9.glb
assets/glb_output/flat.desert_dense.yellow/: desert_dense_0.glb  desert_dense_1.glb  desert_dense_2.glb  desert_dense_3.glb  desert_dense_4.glb  desert_dense_5.glb  desert_dense_6.glb  desert_dense_7.glb  desert_dense_8.glb  desert_dense_9.glb
assets/glb_output/flat.desert_oasis.yellow/: desert_oasis_0.glb  desert_oasis_1.glb  desert_oasis_2.glb  desert_oasis_3.glb  desert_oasis_4.glb  desert_oasis_5.glb  desert_oasis_6.glb  desert_oasis_7.glb  desert_oasis_8.glb  desert_oasis_9.glb
assets/glb_output/flat.desert_sparse.yellow/: desert_sparse_0.glb  desert_sparse_1.glb  desert_sparse_2.glb  desert_sparse_3.glb  desert_sparse_4.glb  desert_sparse_5.glb  desert_sparse_6.glb  desert_sparse_7.glb  desert_sparse_8.glb  desert_sparse_9.glb
assets/glb_output/flat.grassland_clearing.green/: grassland_clearing_0.glb  grassland_clearing_1.glb  grassland_clearing_2.glb  grassland_clearing_3.glb  grassland_clearing_4.glb  grassland_clearing_5.glb  grassland_clearing_6.glb  grassland_clearing_7.glb  grassland_clearing_8.glb  grassland_clearing_9.glb
assets/glb_output/flat.grassland_clearing.winter/: grassland_clearing_0.glb  grassland_clearing_1.glb  grassland_clearing_2.glb  grassland_clearing_3.glb  grassland_clearing_4.glb  grassland_clearing_5.glb  grassland_clearing_6.glb  grassland_clearing_7.glb  grassland_clearing_8.glb  grassland_clearing_9.glb
assets/glb_output/flat.grassland_dense.green/: grassland_dense_0.glb  grassland_dense_1.glb  grassland_dense_2.glb  grassland_dense_3.glb  grassland_dense_4.glb  grassland_dense_5.glb  grassland_dense_6.glb  grassland_dense_7.glb  grassland_dense_8.glb  grassland_dense_9.glb
assets/glb_output/flat.grassland_dense.winter/: grassland_dense_0.glb  grassland_dense_1.glb  grassland_dense_2.glb  grassland_dense_3.glb  grassland_dense_4.glb  grassland_dense_5.glb  grassland_dense_6.glb  grassland_dense_7.glb  grassland_dense_8.glb  grassland_dense_9.glb
assets/glb_output/flat.grassland_lake.green/: grassland_lake_0.glb  grassland_lake_1.glb  grassland_lake_2.glb  grassland_lake_3.glb  grassland_lake_4.glb  grassland_lake_5.glb  grassland_lake_6.glb  grassland_lake_7.glb  grassland_lake_8.glb  grassland_lake_9.glb
assets/glb_output/flat.grassland_lake.winter/: grassland_lake_0.glb  grassland_lake_1.glb  grassland_lake_2.glb  grassland_lake_3.glb  grassland_lake_4.glb  grassland_lake_5.glb  grassland_lake_6.glb  grassland_lake_7.glb  grassland_lake_8.glb  grassland_lake_9.glb
assets/glb_output/flat.grassland_sparse.green/: grassland_sparse_0.glb  grassland_sparse_1.glb  grassland_sparse_2.glb  grassland_sparse_3.glb  grassland_sparse_4.glb  grassland_sparse_5.glb  grassland_sparse_6.glb  grassland_sparse_7.glb  grassland_sparse_8.glb  grassland_sparse_9.glb
assets/glb_output/flat.grassland_sparse.winter/: grassland_sparse_0.glb  grassland_sparse_1.glb  grassland_sparse_2.glb  grassland_sparse_3.glb  grassland_sparse_4.glb  grassland_sparse_5.glb  grassland_sparse_6.glb  grassland_sparse_7.glb  grassland_sparse_8.glb  grassland_sparse_9.glb
assets/shaders/: instancing.fs  instancing.vs
assets/test_glb_output/: 16x16 Icon1.glb  16x16 Icon10.glb  16x16 Icon100.glb  16x16 Icon11.glb  16x16 Icon12.glb  16x16 Icon13.glb  16x16 Icon14.glb  16x16 Icon15.glb  16x16 Icon16.glb  16x16 Icon17.glb  16x16 Icon18.glb  16x16 Icon19.glb  16x16 Icon2.glb  16x16 Icon20.glb  16x16 Icon21.glb  16x16 Icon22.glb  16x16 Icon23.glb  16x16 Icon24.glb  16x16 Icon25.glb  16x16 Icon26.glb  16x16 Icon27.glb  16x16 Icon28.glb  16x16 Icon29.glb  16x16 Icon3.glb  16x16 Icon30.glb  16x16 Icon31.glb  16x16 Icon32.glb  16x16 Icon33.glb  16x16 Icon34.glb  16x16 Icon35.glb  16x16 Icon36.glb  16x16 Icon37.glb  16x16 Icon38.glb  16x16 Icon39.glb  16x16 Icon4.glb  16x16 Icon40.glb  16x16 Icon41.glb  16x16 Icon42.glb  16x16 Icon43.glb  16x16 Icon44.glb  (+63 more)
blender_addons/: glb_hotload_export.py
python_scripts/: img_to_glb.py
src/: app_ctx.cpp  mainpage.dox
src/cli_tools/: embed_binary.cpp
src/mylibs/: asset_helpers.hpp  consol_helpers.hpp  game_console_api.hpp  hexgrid_math.hpp  hitbox_helpers.cpp  ilist.hpp  lua_api.hpp  model_api.hpp  model_store.hpp  mylibs_build_unit.cpp  render_api.hpp  tests_main.cpp  traits.hpp  uid_assets.hpp  zoo.hpp
(+2658 files in other folders)
